# herbst3

./: .gitmodules  Cargo.toml  build.rs  flake.nix  result
src/: cli.rs  helper.rs  herbstclient.rs  main.rs  parser.rs  shift.rs
