[package]
name = "herbst3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
anyhow = "1"
strum = { version = "0.24", features = ["derive"] }
clap = { version = "4", features = [ "derive" ] }
log = "0.4"
pretty_env_logger = "0.4"

[build-dependencies]
clap_complete = "4"
clap = { version = "4", features = [ "derive" ] }
strum = { version = "0.24", features = ["derive"] }
